--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>🌐 Portal Distribuido</h1>
     <p>
       Este proyecto representa una arquitectura distribuida porque divide sus responsabilidades entre múltiples servicios independientes que se comunican entre sí a través de Internet. Este frontend actúa como punto de entrada que redirige hacia diversos servicios PaaS encargados del procesamiento backend, así como a herramientas SaaS como Google Drive y Trello, que añaden funcionalidades externas como almacenamiento o gestión de tareas. Además, se apoya en un entorno IaaS (AWS EC2) que permite mayor control sobre infraestructura personalizada. <br/>
-      Todos estos componentes funcionan de manera autónoma y están desplegados en entornos distintos, pero se integran entre sí para brindar una experiencia completa.
+      <br/>Todos estos componentes funcionan de manera autónoma y están desplegados en entornos distintos, pero se integran entre sí para brindar una experiencia completa.
+    
     </p>
 
     <section>
